--- a/mlportfolio/index.html
+++ b/mlportfolio/index.html
@@ -207,8 +207,8 @@
                 <p>
                     Designed and developed Azure ETL data pipeline that extracts data daily from various sources,
                     including SQL and REST API. The solution also performs data transformation using Azure Data Factory,
-                    Azure Databricks and Azure Data Lake. This implementation resulted in significant efficiency for OS
-                    licensing, reduced manual efforts, and provided valuable insights.
+                    Databricks and Data Lake. This implementation resulted in efficiency gains for valuable licensing
+                    insights and reduced manual efforts by 10 hours per week.
                 </p>
                 <p>
                     <a href="https://github.com/lyoh001/AzureVMAudit"><b>View GitHub</b></a>
