--- a/mlportfolio/index.html
+++ b/mlportfolio/index.html
@@ -16,17 +16,18 @@
     <main>
         <article id="mainRight">
             <section>
-                <h3><b>NLP: A Speech Detection</b></h3>
+                <h3><b>LLM: AI Text Generator powered by a Large Language Model</b></h3>
                 <p>
-                    Developed a speech detection system using NLP, which involved preprocessing using Regex, NLTK,
-                    Gensim, and SpaCy. The data was aggregated and visualized using Pandas, Matplotlib, and Word Cloud
-                    to compile a professional report. The words were tokenized using BoW, TF-IDF, and GloVe, and the
-                    model was fine-tuned using LSTM, Bidirectional LSTM, and BERT.
+                    Developed a web app that generates text based on user input. The data was cleaned and preprocessed
+                    using Regex, NLTK, Gensim, and SpaCy. The data was then visualized to gain insights. A large
+                    language model,
+                    GPT2, was fine-tuned with a custom dataset using PyTorch. The interactive app was built using Azure
+                    Function and Static Webapps.
                 </p>
                 <p>
                     <a
-                        href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mlhatespeech/notebook/notebook.ipynb"><b>View
-                            Notebook</b></a>
+                        href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mlcloudaudit/notebook/notebook.ipynb"><b>View
+                            Notebook</b></a>, <a href="https://lyoh001.com/mlgpt2"><b>View Demo</b></a>
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
@@ -34,10 +35,17 @@
                     <a href="#"><img src="https://img.shields.io/badge/vscode-161B22?logo=visualstudiocode"
                             alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/jupyter-161B22?logo=jupyter" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/tensorflow-161B22?logo=tensorflow" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/sklearn-161B22?logo=scikit-learn" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/pytorch-161B22?logo=pytorch" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/spacy-161B22?logo=spacy" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/twitter-161B22?logo=twitter" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/pandas-161B22?logo=pandas" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/numpy-161B22?logo=numpy" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/azure-161B22?logo=microsoftazure" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/azure_functions-161B22?logo=azure-functions"
+                            alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/github-161B22?logo=github" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
+                            alt="" /></a>
                 </p>
             </section>
             <section>
