--- a/mlgpt2/index.html
+++ b/mlgpt2/index.html
@@ -26,8 +26,25 @@
         <hr>
     </header>
     <main>
-        <article id="mainRight">
+        <article id="mainLeft">
             <section>
+                <h2>CODE</h2>
+                <p>
+                    <i class="fab fa-github" aria-hidden="true"></i>
+                    <a href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mlgpt2/notebook/notebook.ipynb">Fine-tuning
+                        GPT2</a>
+                </p>
+            </section>
+            <section>
+                <h2>DESIGN</h2>
+                <p>
+                    <i class="fab fa-github" aria-hidden="true"></i>
+                    <a href="https://github.com/lyoh001/AzureFunctions">Architectural Design</a>
+                </p>
+            </section>
+        </article>
+        <article id="mainRight">
+            <section class="chat-selection" id="chat-selection">
                 <h2>AI-Powered Text Generator</h2>
                 <div class="chat-window" id="chat-window"></div>
                 <div class="chat-input">
