--- a/mlgpt2/index.html
+++ b/mlgpt2/index.html
@@ -87,6 +87,7 @@
                         aiResponseMessage.style.textAlign = "left";
                         aiResponseMessage.style.color = "#8ECAE6";
                         aiResponseMessage.style.fontWeight = "bold";
+                        aiResponseMessage.style.maxWidth = "500px";
                         var chatWindow = document.getElementById("chat-window");
                         chatWindow.appendChild(aiResponseMessage);
 
