--- a/mlportfolio/index.html
+++ b/mlportfolio/index.html
@@ -25,8 +25,7 @@
                     Function and Static Webapps.
                 </p>
                 <p>
-                    <a
-                        href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mlgpt2/notebook/notebook.ipynb"><b>View
+                    <a href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mlgpt2/notebook/notebook.ipynb"><b>View
                             Notebook</b></a>, <a href="https://lyoh001.com/mlgpt2"><b>View Demo</b></a>
                 </p>
                 <p>
@@ -148,6 +147,11 @@
                 </p>
                 <p><img src="/mlportfolio/images/ann.png"
                         style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
+                <p>
+                    <iframe src="https://www.youtube.com/embed/asOnUFHlvZw?start=554" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen style="width: 80%; height: 80%; display: block; margin: 0 auto;"></iframe>
+                </p>
             </section>
             <section>
                 <h3><b>Stable Diffusion: AI-Generated Image Web Application</b></h3>
