--- a/mlportfolio/index.html
+++ b/mlportfolio/index.html
@@ -46,6 +46,11 @@
                     <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
                             alt="" /></a>
                 </p>
+                <p>
+                    <iframe src="https://www.youtube.com/embed/hkDXrdv3ZqE?start=0" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen style="width: 80%; height: 80%; display: block; margin: 0 auto;"></iframe>
+                </p>
             </section>
             <section>
                 <h3><b>RNN: A Key to Unlocking Cloud Cost Analysis and Optimization using Machine Learning</b>
