--- a/devopsportfolio/index.html
+++ b/devopsportfolio/index.html
@@ -16,6 +16,43 @@
     <main>
         <article id="mainRight">
             <section>
+                <h3><b>LLM: AI Text Generator powered by a Large Language Model</b></h3>
+                <p>
+                    Developed a web app that generates text based on user input. The data was cleaned and preprocessed
+                    using Regex, NLTK, Gensim, and SpaCy. The data was then visualized to gain insights. A large
+                    language model,
+                    GPT2, was fine-tuned with a custom dataset using PyTorch. The interactive app was built using Azure
+                    Function and Static Webapps.
+                </p>
+                <p>
+                    <a href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mlgpt2/notebook/notebook.ipynb"><b>View
+                            Notebook</b></a>, <a href="https://lyoh001.com/mlgpt2"><b>View Demo</b></a>
+                </p>
+                <p>
+                    <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/docker-161B22?logo=docker" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/vscode-161B22?logo=visualstudiocode"
+                            alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/jupyter-161B22?logo=jupyter" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/pytorch-161B22?logo=pytorch" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/spacy-161B22?logo=spacy" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/twitter-161B22?logo=twitter" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/pandas-161B22?logo=pandas" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/numpy-161B22?logo=numpy" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/azure-161B22?logo=microsoftazure" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/azure_functions-161B22?logo=azure-functions"
+                            alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/github-161B22?logo=github" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
+                            alt="" /></a>
+                </p>
+                <p>
+                    <iframe src="https://www.youtube.com/embed/hkDXrdv3ZqE?start=0" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen style="width: 80%; height: 80%; display: block; margin: 0 auto;"></iframe>
+                </p>
+            </section>
+            <section>
                 <h3><b>A Key to Unlocking Cloud Cost Analysis and Optimization using Machine Learning</b>
                 </h3>
                 <p>
