--- a/devopsportfolio/index.html
+++ b/devopsportfolio/index.html
@@ -46,10 +46,11 @@
                     <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
                             alt="" /></a>
                 </p>
-                <p>
+                <p style="position: relative; width: 80%; padding-bottom: 45%; margin: 0 auto;">
                     <iframe src="https://www.youtube.com/embed/hkDXrdv3ZqE?start=0" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen style="width: 80%; height: 80%; display: block; margin: 0 auto;"></iframe>
+                        allowfullscreen
+                        style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
                 </p>
             </section>
             <section>
