--- a/devopsportfolio/index.html
+++ b/devopsportfolio/index.html
@@ -16,7 +16,7 @@
     <main>
         <article id="mainRight">
             <section>
-                <h3><b>LLM: AI Text Generator powered by a Large Language Model</b></h3>
+                <h3><b>AI Text Generator powered by a Large Language Model</b></h3>
                 <p>
                     Developed a web app that generates text based on user input. The data was cleaned and preprocessed
                     using Regex, NLTK, Gensim, and SpaCy. The data was then visualized to gain insights. A large
