--- a/mlcoffeeplantdiseases/index.html
+++ b/mlcoffeeplantdiseases/index.html
@@ -33,15 +33,14 @@
                     <i class="fab fa-github" aria-hidden="true"></i>
                     <a
                         href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mlcoffeeplantdiseases/notebook/notebook.ipynb">Mobilenet_v2
-                        Classification Analysis</a>
+                        Analysis</a>
                 </p>
             </section>
             <section>
                 <h2>DESIGN</h2>
                 <p>
                     <i class="fab fa-github" aria-hidden="true"></i>
-                    <a href="https://github.com/lyoh001/AzureFunctions">Azure Static Web Apps with Function Integration
-                        Design</a>
+                    <a href="https://github.com/lyoh001/AzureFunctions">Architectural Design</a>
                 </p>
             </section>
         </article>
