--- a/mlcovid/index.html
+++ b/mlcovid/index.html
@@ -33,28 +33,27 @@
                     <i class="fab fa-github" aria-hidden="true"></i>
                     <a
                         href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mlcovid/notebook/notebook_mobilenet_v2.ipynb">Mobilenet_v2
-                        Classification Analysis</a>
+                        Analysis</a>
                 </p>
                 <p>
                     <i class="fab fa-github" aria-hidden="true"></i>
                     <a
                         href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mlcovid/notebook/notebook_cnn.ipynb">CNN
-                        Classification Analysis</a>
+                        Analysis</a>
                 </p>
             </section>
             <section>
                 <h2>DESIGN</h2>
                 <p>
                     <i class="fab fa-github" aria-hidden="true"></i>
-                    <a href="https://github.com/lyoh001/AzureFunctions">Azure Static Web Apps with Function Integration
-                        Design</a>
+                    <a href="https://github.com/lyoh001/AzureFunctions">Architectural Design</a>
                 </p>
             </section>
             <section>
                 <h2>PROJECT</h2>
                 <p>
                     <i class="fa fa-home" aria-hidden="true"></i>
-                    <a href="https://github.com/lyoh001/DLCovid19">Covid19 Xray Image Classification</a>
+                    <a href="https://github.com/lyoh001/DLCovid19">Covid19 Xray Classification</a>
                 </p>
                 <p></p>
             </section>
