--- a/mlcoffeeplantdiseases/index.html
+++ b/mlcoffeeplantdiseases/index.html
@@ -46,7 +46,7 @@
         </article>
         <article id="mainRight">
             <section>
-                <h2>COFFEE PLANT DISEASES AI DETECTION</h2>
+                <h2>Coffee Plant Diseases AI Detection</h2>
                 <p>
                     Please select one of the coffee leaf images below and click predict to continue.
                 </p>
