--- a/mlcovid/index.html
+++ b/mlcovid/index.html
@@ -60,7 +60,7 @@
         </article>
         <article id="mainRight">
             <section>
-                <h2>COVID XRAY AI DETECTION</h2>
+                <h2>Covid Xray AI Detection</h2>
                 <p>
                     Please select one of the xray images below and click predict to continue.
                 </p>
