--- a/mlvmaudit/index.html
+++ b/mlvmaudit/index.html
@@ -36,51 +36,29 @@
                     <i class="fab fa-github" aria-hidden="true"></i>
                     <a
                         href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mlcloudaudit/notebook/notebook.ipynb">
-                        Cloud Usage Prediction Analysis</a>
+                        Cloud Usage Analysis</a>
                 </p>
                 <p>
                     <i class="fab fa-github" aria-hidden="true"></i>
                     <a href="https://github.com/lyoh001/AzureReservedInstance/blob/main/notebook/notebook.ipynb">
-                        VM RI and vCore Analysis</a>
+                        VM RI, vCore Analysis</a>
                 </p>
             </section>
             <section>
                 <h2>DESIGN</h2>
                 <p>
                     <i class="fab fa-github" aria-hidden="true"></i>
-                    <a href="https://github.com/lyoh001/AzureBillForecast">Cloud Usage Prediction Analysis</a>
+                    <a href="https://github.com/lyoh001/AzureBillForecast">Cloud Usage Analysis</a>
                 </p>
                 <p>
                     <i class="fab fa-github" aria-hidden="true"></i>
-                    <a href="https://github.com/lyoh001/AzureReservedInstance">VM RI and vCore Analysis</a>
+                    <a href="https://github.com/lyoh001/AzureReservedInstance">VM RI, vCore Analysis</a>
                 </p>
             </section>
         </article>
         <article id="mainRight">
             <section>
-                <h2>ACHIEVEMENT</h2>
-                <p>The requirement from the business was to conduct a more in-depth analysis of the current cost model
-                    of cloud resources in order to achieve a number of objectives. These objectives included not only
-                    auditing the current costs, but also identifying ways to optimize the license scheme and resource
-                    utilization in order to reduce overall consumption.
-
-                    To address this requirement, I employed a number of different tools and techniques. First, I used a
-                    Power BI dashboard to analyze the current cost model of cloud resources. This provided a visual
-                    representation of the data and allowed me to easily identify areas where costs could be reduced.
-
-                    Next, I deployed an AI model to the cloud using LSTM, Tensorflow, ScikitLearn, Pandas, Numpy,
-                    Matplotlib and Seaborn. This model was used to predict future consumption and identify potential
-                    cost savings. By using these tools, I was able to optimize the license scheme and resource
-                    utilization, which ultimately led to cost savings of over $500k per annum.
-
-                    Overall, my approach was a multi-faceted one that involved a combination of data analysis, machine
-                    learning, and optimization techniques. By leveraging the power of these tools and techniques, I was
-                    able to successfully address the business's requirement and achieve significant cost savings for the
-                    organization.
-                </p>
-            </section>
-            <section>
-                <h2>AI CLOUD USAGE PREDICTOR</h2>
+                <h2>AI Cloud Usage Predictor</h2>
                 <p>
                     Please populate the input fields listed below to predict cloud usage.
                 </p>
