--- a/mlmaternalmortality/index.html
+++ b/mlmaternalmortality/index.html
@@ -36,33 +36,20 @@
                     <i class="fab fa-github" aria-hidden="true"></i>
                     <a
                         href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mlmaternalmortality/notebook/notebook.ipynb">Risk
-                        Level
-                        Prediction Analysis</a>
+                        Level Analysis</a>
                 </p>
             </section>
             <section>
                 <h2>DESIGN</h2>
                 <p>
                     <i class="fab fa-github" aria-hidden="true"></i>
-                    <a href="https://github.com/lyoh001/AzureFunctions">Azure Static Web Apps with Function Integration
-                        Design</a>
+                    <a href="https://github.com/lyoh001/AzureFunctions">Architectural Design</a>
                 </p>
             </section>
         </article>
         <article id="mainRight">
             <section>
-                <h2>PROBLEM STATEMENT</h2>
-                <p>The strongest indications for health risks during pregnancy can vary, but some common conditions that
-                    can increase the risk of complications include hypertension, diabetes, obesity, heart disease,
-                    autoimmune disorders, and certain infections such as HIV or syphilis. Additionally, certain
-                    lifestyle factors, such as smoking or alcohol consumption, can also increase the risk of
-                    complications during pregnancy.
-                    It's important to note that early and regular prenatal care can help identify and manage potential
-                    health risks during pregnancy and improve outcomes for both the mother and baby.
-                </p>
-            </section>
-            <section>
-                <h2>AI RISK PREDICTION</h2>
+                <h2>AI Risk Prediction</h2>
                 <p>
                     Please populate the patient's metrics listed below and click predict to continue.
                 </p>
