--- a/mlvmaudit/index.html
+++ b/mlvmaudit/index.html
@@ -58,7 +58,7 @@
         </article>
         <article id="mainRight">
             <section>
-                <h2>AI Cloud Usage Predictor</h2>
+                <h2>AI Cloud Usage Prediction</h2>
                 <p>
                     Please populate the input fields listed below to predict cloud usage.
                 </p>
