--- a/mlsupplychain/index.html
+++ b/mlsupplychain/index.html
@@ -35,58 +35,35 @@
                 <p>
                     <i class="fab fa-github" aria-hidden="true"></i>
                     <a
-                        href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mlsupplychain/notebook/notebook_otd.ipynb">On
-                        Time
-                        Delivery Prediction
-                        Analysis</a>
+                        href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mlsupplychain/notebook/notebook_otd.ipynb">OnTime
+                        Delivery Analysis</a>
                 </p>
                 <p>
                     <i class="fab fa-github" aria-hidden="true"></i>
                     <a
-                        href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mlsupplychain/notebook/notebook_ifd.ipynb">In
-                        Full
-                        Delivery Prediction
-                        Analysis</a>
+                        href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mlsupplychain/notebook/notebook_ifd.ipynb">InFull
+                        Delivery Analysis</a>
                 </p>
             </section>
             <section>
                 <h2>DESIGN</h2>
                 <p>
                     <i class="fab fa-github" aria-hidden="true"></i>
-                    <a href="https://github.com/lyoh001/AzureFunctions">Azure Static Web Apps with Function Integration
-                        Design</a>
+                    <a href="https://github.com/lyoh001/AzureFunctions">Architectural Design</a>
                 </p>
             </section>
             <section>
                 <h2>PROJECT</h2>
                 <p>
                     <i class="fa fa-home" aria-hidden="true"></i>
-                    <a href="https://codebasics.io/event/codebasics-resume-project-challenge">Codebasics Project</a>
+                    <a href="https://codebasics.io/event/codebasics-resume-project-challenge">Codebasics</a>
                 </p>
                 <p></p>
             </section>
         </article>
         <article id="mainRight">
             <section>
-                <h2>PROBLEM STATEMENT</h2>
-                <p>AtliQ Mart is a growing FMCG manufacturer headquartered in Gujarat, India. It is currently
-                    operational in three cities Surat, Ahmedabad and Vadodra. They want to expand to other metro/tier1
-                    cities in the next 2 years.
-
-                    AtliQ Mart is currently facing a problem where a few key customers did not extend the annual
-                    contract due to service issues. It is speculated that some of the essential products were either not
-                    delivered on time or not delivered in full over a continued period, which could have resulted in bad
-                    customer service. Management wants to fix this issue before expanding to other cities and requested
-                    their supply chain analytics team to track the 'On time' and 'In Full' delivery service level for
-                    all the customers on a daily basis so that they can respond swiftly to these issues.
-
-                    The Supply Chain team decided to use a standard approach to measure the service level in which they
-                    will measure 'on-time delivery (OT) %', 'In-full delivery (IF) %' and OnTime in full (OTIF) % of the
-                    customer orders on a daily basis against the target service level set for each customer.
-                </p>
-            </section>
-            <section>
-                <h2>AI DELIVERY PREDICTION</h2>
+                <h2>AI Delivery Prediction</h2>
                 <p>
                     Please populate the input fields listed below and click predict to continue.
                 </p>
