--- a/mltelecom/index.html
+++ b/mltelecom/index.html
@@ -34,41 +34,28 @@
                 <h2>CODE</h2>
                 <p>
                     <i class="fab fa-github" aria-hidden="true"></i>
-                    <a href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mltelecom/notebook/notebook.ipynb">Plan
-                        Revenue Prediction Analysis</a>
+                    <a href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mltelecom/notebook/notebook.ipynb">Revenue Analysis</a>
                 </p>
             </section>
             <section>
                 <h2>DESIGN</h2>
                 <p>
                     <i class="fab fa-github" aria-hidden="true"></i>
-                    <a href="https://github.com/lyoh001/AzureFunctions">Azure Static Web Apps with Function Integration
-                        Design</a>
+                    <a href="https://github.com/lyoh001/AzureFunctions">Architectural Design</a>
                 </p>
             </section>
             <section>
                 <h2>PROJECT</h2>
                 <p>
                     <i class="fa fa-home" aria-hidden="true"></i>
-                    <a href="https://codebasics.io/challenge/codebasics-resume-project-challenge">Codebasics Project</a>
+                    <a href="https://codebasics.io/challenge/codebasics-resume-project-challenge">Codebasics</a>
                 </p>
                 <p></p>
             </section>
         </article>
         <article id="mainRight">
             <section>
-                <h2>PROBLEM STATEMENT</h2>
-                <p>AtliQo is one of the leading telecom providers in India and launched it's 5G plans in May 2022 along
-                    with other telecom providers.
-                    However, the management noticed a decline in their active users and revenue growth post 5G launch in
-                    May 2022. Atliqo's business director requested to provide a comparison report
-                    of KPIs between pre and post-periods of the 5G launch. The management is keen to compare the
-                    performance between these periods and get insights which would enable them to make informed
-                    decisions to recover their active user rate by optimizing internet plans.
-                </p>
-            </section>
-            <section>
-                <h2>AI PLAN OPTIMIZER</h2>
+                <h2>AI Plan Optimizer</h2>
                 <p>
                     Please populate the input fields listed below to optimize internet plan.
                 </p>
