--- a/mltelecom/index.html
+++ b/mltelecom/index.html
@@ -34,7 +34,8 @@
                 <h2>CODE</h2>
                 <p>
                     <i class="fab fa-github" aria-hidden="true"></i>
-                    <a href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mltelecom/notebook/notebook.ipynb">Revenue Analysis</a>
+                    <a href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mltelecom/notebook/notebook.ipynb">Revenue
+                        Analysis</a>
                 </p>
             </section>
             <section>
