--- a/mlportfolio/index.html
+++ b/mlportfolio/index.html
@@ -87,6 +87,12 @@
                 </p>
                 <p><img src="/mlportfolio/images/lstm.png"
                         style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
+                <p style="position: relative; width: 80%; padding-bottom: 45%; margin: 0 auto;">
+                    <iframe src="https://www.youtube.com/embed/XfcVUTvRDS4?start=0" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen
+                        style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
+                </p>
             </section>
             <section>
                 <h3><b>CNN: Accurate COVID-19 Detection using Machine Learning</b></h3>
