--- a/mlportfolio/index.html
+++ b/mlportfolio/index.html
@@ -120,7 +120,8 @@
                     <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
                             alt="" /></a>
                 </p>
-                <p><img src="images/cnn.png" style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
+                <p><img src="/mlportfolio/images/cnn.png"
+                        style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
             </section>
             <section>
                 <h3><b>ANN: Unveiling Telecommunication Hidden Insights with Machine Learning</b></h3>
