--- a/mlportfolio/index.html
+++ b/mlportfolio/index.html
@@ -122,6 +122,41 @@
                 </p>
                 <p><img src="/mlportfolio/images/cnn.png"
                         style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
+                <p style="position: relative; width: 80%; padding-bottom: 45%; margin: 0 auto;">
+                    <iframe src="https://www.youtube.com/embed/j562uYibheo?start=0" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen
+                        style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
+                </p>
+            </section>
+            <section>
+                <h3><b>Stable Diffusion: AI-Generated Image Web Application</b></h3>
+                <p>
+                    Conceptualized, developed, and implemented a dynamic web application
+                    dedicated to generating AI-generated images. Created an intuitive and user-friendly interface that
+                    allows users to effortlessly generate unique images through prompt inputs.
+                </p>
+                <p>
+                    <a
+                        href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mlstablediffusion/notebook/notebook.ipynb"><b>View
+                            Notebook</b></a>
+                </p>
+                <p>
+                    <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/docker-161B22?logo=docker" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/vscode-161B22?logo=visualstudiocode"
+                            alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/jupyter-161B22?logo=jupyter" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/github-161B22?logo=github" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
+                            alt="" /></a>
+                </p>
+                <p style="position: relative; width: 80%; padding-bottom: 45%; margin: 0 auto;">
+                    <iframe src="https://www.youtube.com/embed/LQIE_r-WgI8?start=0" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen
+                        style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
+                </p>
             </section>
             <section>
                 <h3><b>ANN: Unveiling Telecommunication Hidden Insights with Machine Learning</b></h3>
@@ -165,32 +200,6 @@
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen
                         style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
-                </p>
-            </section>
-            <section>
-                <h3><b>Stable Diffusion: AI-Generated Image Web Application</b></h3>
-                <p>
-                    Conceptualized, developed, and implemented a dynamic web application
-                    dedicated to generating AI-generated images. Created an intuitive and user-friendly interface that
-                    allows users to effortlessly generate unique images through prompt inputs.
-                </p>
-                <p>
-                    <a
-                        href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mlstablediffusion/notebook/notebook.ipynb"><b>View
-                            Notebook</b></a>
-                </p>
-                <p>
-                    <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/docker-161B22?logo=docker" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/vscode-161B22?logo=visualstudiocode"
-                            alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/jupyter-161B22?logo=jupyter" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/github-161B22?logo=github" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
-                            alt="" /></a>
-                </p>
-                <p><img src="/mlportfolio/images/stable_diffusion.png"
-                        style="max-width: 80%; height: auto; display: block; margin: 0 auto;">
                 </p>
             </section>
             <section>
