--- a/mlportfolio/index.html
+++ b/mlportfolio/index.html
@@ -132,7 +132,7 @@
             <section>
                 <h3><b>Stable Diffusion: AI-Generated Image Web Application</b></h3>
                 <p>
-                    Conceptualized, developed, and implemented a dynamic web application
+                    Conceptualised, developed, and implemented a dynamic web application
                     dedicated to generating AI-generated images. Created an intuitive and user-friendly interface that
                     allows users to effortlessly generate unique images through prompt inputs.
                 </p>
