--- a/mlportfolio/index.html
+++ b/mlportfolio/index.html
@@ -54,6 +54,65 @@
                 </p>
             </section>
             <section>
+                <h3><b>LLM: Fine-tuned Falcon 7b LLM with QLoRA on a Custom Dataset</b></h3>
+                <p>
+                    The Falcon 7b LLM was fine-tuned on a custom dataset using QLoRA. The dataset consisted of Chatbot
+                    customer support FAQs from an ecommerce website. A QLoRA adapter was implemented and the fine-tuning
+                    process was conducted. The performance of the untrained and trained models was compared by
+                    evaluating their responses to various prompts. The trained model was uploaded to the Hugging Face
+                    Hub for later consumption.
+                </p>
+                <p>
+                    <a href="https://github.com/lyoh001/DLFalcon"><b>View
+                            GitHub</b></a>
+                </p>
+                <p>
+                    <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/docker-161B22?logo=docker" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/vscode-161B22?logo=visualstudiocode"
+                            alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/jupyter-161B22?logo=jupyter" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/github-161B22?logo=github" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
+                            alt="" /></a>
+                </p>
+                <p style="position: relative; width: 80%; padding-bottom: 45%; margin: 0 auto;">
+                    <iframe src="https://www.youtube.com/embed/-vD_kHpCwRY?start=0" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen
+                        style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
+                </p>
+            </section>
+            <section>
+                <h3><b>Stable Diffusion: AI-Generated Image Web Application</b></h3>
+                <p>
+                    Conceptualised, developed, and implemented a dynamic web application
+                    dedicated to generating AI-generated images. Created an intuitive and user-friendly interface that
+                    allows users to effortlessly generate unique images through prompt inputs.
+                </p>
+                <p>
+                    <a
+                        href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mlstablediffusion/notebook/notebook.ipynb"><b>View
+                            Notebook</b></a>
+                </p>
+                <p>
+                    <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/docker-161B22?logo=docker" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/vscode-161B22?logo=visualstudiocode"
+                            alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/jupyter-161B22?logo=jupyter" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/github-161B22?logo=github" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
+                            alt="" /></a>
+                </p>
+                <p style="position: relative; width: 80%; padding-bottom: 45%; margin: 0 auto;">
+                    <iframe src="https://www.youtube.com/embed/LQIE_r-WgI8?start=0" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen
+                        style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
+                </p>
+            </section>
+            <section>
                 <h3><b>RNN: A Key to Unlocking Cloud Cost Analysis and Optimization using Machine Learning</b>
                 </h3>
                 <p>
@@ -124,35 +183,6 @@
                         style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
                 <p style="position: relative; width: 80%; padding-bottom: 45%; margin: 0 auto;">
                     <iframe src="https://www.youtube.com/embed/j562uYibheo?start=0" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen
-                        style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
-                </p>
-            </section>
-            <section>
-                <h3><b>Stable Diffusion: AI-Generated Image Web Application</b></h3>
-                <p>
-                    Conceptualised, developed, and implemented a dynamic web application
-                    dedicated to generating AI-generated images. Created an intuitive and user-friendly interface that
-                    allows users to effortlessly generate unique images through prompt inputs.
-                </p>
-                <p>
-                    <a
-                        href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mlstablediffusion/notebook/notebook.ipynb"><b>View
-                            Notebook</b></a>
-                </p>
-                <p>
-                    <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/docker-161B22?logo=docker" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/vscode-161B22?logo=visualstudiocode"
-                            alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/jupyter-161B22?logo=jupyter" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/github-161B22?logo=github" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
-                            alt="" /></a>
-                </p>
-                <p style="position: relative; width: 80%; padding-bottom: 45%; margin: 0 auto;">
-                    <iframe src="https://www.youtube.com/embed/LQIE_r-WgI8?start=0" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen
                         style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
