--- a/mlportfolio/index.html
+++ b/mlportfolio/index.html
@@ -19,10 +19,9 @@
                 <h3><b>LLM: AI Text Generator powered by a Large Language Model</b></h3>
                 <p>
                     Developed a web app that generates text based on user input. The data was cleaned and preprocessed
-                    using Regex, NLTK, Gensim, and SpaCy. The data was then visualized to gain insights. A large
-                    language model,
-                    GPT2, was fine-tuned with a custom dataset using PyTorch. The interactive app was built using Azure
-                    Function and Static Webapps.
+                    using Regex, NLTK, Gensim, and SpaCy. The data was then visualised to gain insights. A large
+                    language model, GPT2, was fine-tuned with a custom dataset using PyTorch. The interactive app was
+                    built using Azure Function and Static Web apps.
                 </p>
                 <p>
                     <a href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mlgpt2/notebook/notebook.ipynb"><b>View
@@ -56,10 +55,10 @@
             <section>
                 <h3><b>LLM: Fine-tuned Falcon 7b LLM with QLoRA on a Custom Dataset</b></h3>
                 <p>
-                    The Falcon 7b LLM was fine-tuned on a custom dataset using QLoRA. The dataset consisted of Chatbot
-                    customer support FAQs from an ecommerce website. A QLoRA adapter was implemented and the fine-tuning
-                    process was conducted. The performance of the untrained and trained models was compared by
-                    evaluating their responses to various prompts. The trained model was uploaded to the Hugging Face
+                    The Falcon 7B LLM was fine-tuned on a custom dataset using QLoRA. The dataset consisted of Chatbot
+                    customer support FAQs from an E-commerce website. A QLoRA adaptor was implemented and the
+                    fine-tuning process was conducted. The performance of the untrained and trained models was compared
+                    by evaluating their responses to various prompts. The trained model was uploaded to the Hugging Face
                     Hub for later consumption.
                 </p>
                 <p>
@@ -86,9 +85,9 @@
             <section>
                 <h3><b>Stable Diffusion: AI-Generated Image Web Application</b></h3>
                 <p>
-                    Conceptualised, developed, and implemented a dynamic web application
-                    dedicated to generating AI-generated images. Created an intuitive and user-friendly interface that
-                    allows users to effortlessly generate unique images through prompt inputs.
+                    Conceptualised, developed, and implemented a dynamic web application dedicated to generating
+                    AI-generated images. Created an intuitive and user-friendly interface that allows users to
+                    effortlessly generate unique images through prompt inputs.
                 </p>
                 <p>
                     <a
@@ -156,7 +155,7 @@
             <section>
                 <h3><b>CNN: Accurate COVID-19 Detection using Machine Learning</b></h3>
                 <p>
-                    Developed an application that utilizes a Convolutional Neural Network to classify X-ray images for
+                    Developed an application that utilises a Convolutional Neural Network to classify X-ray images for
                     Covid infection detection. Increased the sample size using data augmentation and achieved a 96%
                     accuracy using MobileNet (transfer learning). The application has been deployed to the cloud,
                     enabling efficient diagnosis of Covid infections by doctors.
