--- a/mlportfolio/index.html
+++ b/mlportfolio/index.html
@@ -55,11 +55,10 @@
             <section>
                 <h3><b>LLM: Fine-tuned Falcon 7b LLM with QLoRA on a Custom Dataset</b></h3>
                 <p>
-                    The Falcon 7B LLM was fine-tuned on a custom dataset using QLoRA. The dataset consisted of Chatbot
-                    customer support FAQs from an E-commerce website. A QLoRA adaptor was implemented and the
-                    fine-tuning process was conducted. The performance of the untrained and trained models was compared
-                    by evaluating their responses to various prompts. The trained model was uploaded to the Hugging Face
-                    Hub for later consumption.
+                    Fine-tuned the Falcon 7B LLM on a custom dataset using QLoRA, specifically Chatbot customer support
+                    FAQs from an E-commerce website. Implemented a QLoRA adaptor and conducted the fine-tuning process.
+                    Compared the performance of the untrained and trained models by evaluating their responses to
+                    various prompts. Uploaded the trained model to the Hugging Face Hub for later consumption.
                 </p>
                 <p>
                     <a href="https://github.com/lyoh001/DLFalcon"><b>View
