--- a/mlportfolio/index.html
+++ b/mlportfolio/index.html
@@ -82,6 +82,33 @@
                 </p>
             </section>
             <section>
+                <h3><b>NLP: Disaster Tweets using Distilbert and GPT-NeoX-20B</b></h3>
+                <p>
+                    Built an NLP model using Distilbert on a dataset of 284k disaster tweets, achieving over 90%
+                    accuracy. Additionally, a large language model, GPT-NeoX, with 20 billion parameters was fine-tuned
+                    using QLoRA.
+                </p>
+                <p>
+                    <a
+                        href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mldisastertweets/notebook/notebook_distibert.ipynb"><b>View
+                            Notebook</b></a>, <a
+                        href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mldisastertweets/notebook/notebook_gpt_neox_20b.ipynb"><b>View
+                            Notebook</b></a>
+                </p>
+                <p>
+                    <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/docker-161B22?logo=docker" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/vscode-161B22?logo=visualstudiocode"
+                            alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/jupyter-161B22?logo=jupyter" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/github-161B22?logo=github" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
+                            alt="" /></a>
+                </p>
+                <p><img src="/mlportfolio/images/nlp.png"
+                        style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
+            </section>
+            <section>
                 <h3><b>Stable Diffusion: AI-Generated Image Web Application</b></h3>
                 <p>
                     Conceptualised, developed, and implemented a dynamic web application dedicated to generating
