--- a/mlportfolio/index.html
+++ b/mlportfolio/index.html
@@ -91,9 +91,9 @@
                 <p>
                     <a
                         href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mldisastertweets/notebook/notebook_distibert.ipynb"><b>View
-                            Notebook</b></a>, <a
+                            Distibert Notebook</b></a>, <a
                         href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mldisastertweets/notebook/notebook_gpt_neox_20b.ipynb"><b>View
-                            Notebook</b></a>
+                            GPT Neox Notebook</b></a>
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
