--- a/mlportfolio/index.html
+++ b/mlportfolio/index.html
@@ -53,10 +53,10 @@
                 </p>
             </section>
             <section>
-                <h3><b>LLM: Fine-tuned Falcon 7b LLM with QLoRA on a Custom Dataset</b></h3>
+                <h3><b>LLM: Fine-tuned Falcon-7B LLM with QLoRA on a Custom Dataset</b></h3>
                 <p>
-                    Fine-tuned the Falcon 7B LLM on a custom dataset using QLoRA, specifically Chatbot customer support
-                    FAQs from an E-commerce website. Implemented a QLoRA adaptor and conducted the fine-tuning process.
+                    Fine-tuned a large language model, Falcon, with 7 billion parameters on a custom dataset using
+                    QLoRA, specifically Chatbot customer support FAQs from an E-commerce website. Implemented a QLoRA adaptor and conducted the fine-tuning process.
                     Compared the performance of the untrained and trained models by evaluating their responses to
                     various prompts. Uploaded the trained model to the Hugging Face Hub for later consumption.
                 </p>
@@ -82,15 +82,15 @@
                 </p>
             </section>
             <section>
-                <h3><b>NLP: Disaster Tweets using Distilbert and GPT-NeoX-20B</b></h3>
+                <h3><b>NLP: Disaster Tweets using DistilBERT and GPT-NeoX-20B</b></h3>
                 <p>
-                    Built an NLP model using Distilbert on a dataset of 284k disaster tweets, achieving over 90%
+                    Built an NLP model using DistilBERT on a dataset of 284k disaster tweets, achieving over 90%
                     accuracy. Additionally, a large language model, GPT-NeoX, with 20 billion parameters was fine-tuned
                     using QLoRA.
                 </p>
                 <p>
                     <a
-                        href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mldisastertweets/notebook/notebook_distibert.ipynb"><b>View
+                        href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mldisastertweets/notebook/notebook_distilbert.ipynb"><b>View
                             Distibert Notebook</b></a>, <a
                         href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mldisastertweets/notebook/notebook_gpt_neox_20b.ipynb"><b>View
                             GPT Neox Notebook</b></a>
